--- a/README.adoc
+++ b/README.adoc
@@ -1,24 +1,30 @@
-# overtimer
+= overtimer
+
 Simple CLI to track overtimes and spending this time.
 Keeps data in `overtimer.json` file.
 
-## commands
-- `overtimer status`/`overtimer` - show current status
-```
+== commands
+
+* `overtimer status`/`overtimer` - show current status
+
+----
 overtime: 1h34m36s
 or
 debt: -1h36m37s
-```
+----
 
-- `overtimer start` - start overtime
-```
+* `overtimer start` - start overtime
+
+----
 overtime started at 2020-05-01T01:14:57+03:00
-```
+----
 
-- `overtimer spend` - start spending time
-- `overtimer stop` - stop overtime/spending time
+* `overtimer spend` - start spending time
 
-## build
+* `overtimer stop` - stop overtime/spending time
+
+== build
+
 `go build romangaranin.dev/overtimer`
 or
 `go install romangaranin.dev/overtimer`
